yaml/flatris/service-flatris.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-flatris
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: flatris
  type: ClusterIP
#  type: NodePort
