yaml/flatris/ingress-flatris.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-flatris

spec:
  rules:
    - host: flatris.nefalem.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  service-flatris
                port:
                  number: 80
